--- a/templates/main.html
+++ b/templates/main.html
@@ -10,9 +10,6 @@
     <script src="https://unpkg.com/mdui@2/mdui.global.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-    <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-family: 'Material Icons';
@@ -38,7 +35,7 @@
         }
 
         * {
-            font-family: "Google Sans", "Roboto", "Helvetica", -apple-system, serif;
+            font-family: -apple-system, "Helvetica", serif;
         }
 
         @keyframes recording {
@@ -187,7 +184,6 @@
     </div>
 </div>
 <canvas id="canvas" style="display: none"></canvas>
-<button id="tts-button" style="display: none"></button>
 <script>
     mdui.setTheme("auto")
 
@@ -256,7 +252,7 @@
 
         recognition.onnomatch = (e) => {
             mdui.snackbar({
-                    message: "未识别到结果"
+                    message: "No results found"
                 }
             )
         }
